# neurovisor

./: .gitignore  Cargo.toml  README.md  build-ebpf.sh  build.rs  build_rootfs.sh  run_guest.sh  snapshot_init.sh
docs/: CAPABILITY_DROPPING_WSL2.md  neurovisor_architecture.md
ebpf-programs/: Cargo.toml
ebpf-programs/src/: lsm_file_open.rs  span_trace.rs  syscall_trace.rs
examples/: capabilities_demo.rs  capabilities_proof.rs  cgroups_demo.rs  ebpf_proof.rs  lsm_proof.rs  metrics_demo.rs  rate_limit_demo.rs  rate_limit_proof.rs  seccomp_demo.rs  seccomp_proof.rs  streaming_latency.rs  trace_id_demo.rs
guest/agent/: main.rs
monitoring/: docker-compose.yml
monitoring/grafana/provisioning/dashboards/: dashboard.yml  neurovisor.json
monitoring/grafana/provisioning/datasources/: datasource.yml
monitoring/loki/: loki.yaml
monitoring/otel/: otel-collector.yaml
monitoring/prometheus/: prometheus.yml
monitoring/tempo/: tempo.yaml
proto/: execution.proto  inference.proto
src/: lib.rs  main.rs  tracing.rs
src/agent/: controller.rs  mod.rs  sessions.rs
src/cgroups/: manager.rs  mod.rs
src/dashboard/: mod.rs
src/ebpf/: loader.rs  metrics.rs  mod.rs
src/ebpf/security/: lsm.rs  mod.rs  policy.rs
src/ebpf/tracing/: collector.rs  mod.rs
src/grpc/: execution.rs  gateway.rs  mod.rs  server.rs  vsock.rs
src/metrics/: mod.rs
src/ollama/: client.rs  mod.rs  tool_use.rs
src/security/: capabilities.rs  mod.rs  rate_limit.rs  seccomp.rs
src/vm/: config.rs  firecracker.rs  handle.rs  lifecycle.rs  manager.rs  mod.rs  pool.rs
tests/: agent_tests.rs
