[package]
name = "neurovisor"
version = "0.1.0"
edition = "2021"

[lib]
name = "neurovisor"
path = "src/lib.rs"

[[bin]]
name = "neurovisor"
path = "src/main.rs"

[[bin]]
name = "builder"
path = "src/bin/builder.rs"

[[bin]]
name = "guest_client"
path = "src/bin/guest_client.rs"

[[bin]]
name = "vsock_test"
path = "src/bin/vsock_test.rs"

[dependencies]
# Async Runtime
tokio = { version = "1", features = ["full"] }
tokio-vsock = "0.3"
reqwest = { version = "0.11", default-features = false, features = ["json", "stream", "rustls-tls"] }
futures-util = "0.3"

# HTTP Client (for Firecracker API)
hyper = { version = "1.0", features = ["full"] }
hyper-util = { version = "0.1", features = ["client", "http1", "client-legacy"] }
http-body-util = "0.1"
hyperlocal = "0.9"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Systems Programming (Terminal & IO)
nix = { version = "0.27", features = ["fs", "term"] }
libc = "0.2"

# gRPC
tonic = "0.12"
prost = "0.13"
tower = "0.4"
tokio-stream = "0.1"
async-stream = "0.3"

[build-dependencies]
tonic-build = "0.12"