[package]
name = "neurovisor"
version = "0.1.0"
edition = "2021"

[lib]
name = "neurovisor"
path = "src/lib.rs"

[[bin]]
name = "neurovisor"
path = "src/main.rs"

[[bin]]
name = "builder"
path = "src/bin/builder.rs"

[[bin]]
name = "guest_client"
path = "src/bin/guest_client.rs"

[[bin]]
name = "vsock_test"
path = "src/bin/vsock_test.rs"

# ─────────────────────────────────────────────────────────────────────────────
# Examples - Showcase demos for portfolio/blog
# Run with: cargo run --example <name>
# ─────────────────────────────────────────────────────────────────────────────

[[example]]
name = "cgroups_demo"
path = "examples/cgroups_demo.rs"

[[example]]
name = "streaming_latency"
path = "examples/streaming_latency.rs"

[[example]]
name = "trace_id_demo"
path = "examples/trace_id_demo.rs"

[[example]]
name = "metrics_demo"
path = "examples/metrics_demo.rs"

[dependencies]
# Async Runtime
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "stream", "rustls-tls"] }
futures-util = "0.3"

# HTTP Client (for Firecracker API)
hyper = { version = "1.0", features = ["full"] }
hyper-util = { version = "0.1", features = ["client", "http1", "client-legacy"] }
http-body-util = "0.1"
hyperlocal = "0.9"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Systems Programming (Terminal & IO)
nix = { version = "0.27", features = ["fs", "term"] }
libc = "0.2"

# gRPC
tonic = "0.12"
prost = "0.13"
tower = "0.4"
tokio-stream = "0.1"
async-stream = "0.3"

# Tracing & Observability
uuid = { version = "1", features = ["v7"] }  # v7 = timestamp + random (time-sortable)
prometheus = "0.13"                           # Metrics collection
lazy_static = "1.4"                           # Global metric registry

[build-dependencies]
tonic-build = "0.12"